name:                hlsexamples
synopsis:            Example files demonstrating haskell-language-server features.
version:             0.0.1.0
homepage:            https://github.com/shapr/hlsexamples
license:             BSD3
author:              Shae Erisson
maintainer:          Shae Erisson
copyright:           Shae Erisson
category:            Package.Category
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Examples
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5
                     , QuickCheck
                     , text

executable hlsexamples
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , hlsexamples

test-suite hlsexamples-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , hlsexamples
                  , hedgehog
